--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -19,6 +19,8 @@ rmd_files: [
   heckman-selection.Rmd,
   tobit.Rmd,
   naive-bayes.Rmd,
+  multinomial.Rmd,
+  ordinal.Rmd,
   
   # Algos
   penalized-maximum-likelihood.Rmd,
